--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -34,6 +34,7 @@
             <li><a href="{% url 'list' %}">Todas as NEs</a></li>
             {% if user.role == 'admin' %}
                 <li><a href="{% url 'manage' %}">Gestão</a></li>
+                <li><a href="{% url 'admin:index' %}">Administração</a></li>
             {% endif %}
             <li><a href="{% url 'logout' %}">Sair</a></li>
         </ul>
