--- a/ne_control/templates/ne_control/list.html
+++ b/ne_control/templates/ne_control/list.html
@@ -7,15 +7,12 @@
 {% block content %}
 
 <div class="p-6">
-    <div class="max-w-full overflow-auto bg-white rounded-2xl shadow-md p-6">
+    <div class="max-w-full overflow-auto bg-white shadow-md p-6 rounded-2xl" >
 
         <!-- Cabeçalho, Pesquisar e Adicionar Nota -->
         <div class="mb-4 flex flex-col md:flex-row justify-between gap-4">
             <input id="search" type="text" placeholder="Pesquisar NE ou Responsável..."
                 class="border border-gray-300 rounded-lg px-4 py-2 w-full md:w-1/3" />
-            <button class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700">
-                Adicionar Nota
-            </button>
         </div>
 
         <!-- Menu da lista das NEs -->
