--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -4,23 +4,32 @@
 
 {% block content %}
 
-<div class="flex items-center justify-center min-h-screen overflow-hidden">
-    <div class="w-full max-w-sm p-6 bg-white rounded-xl shadow-md">
-        <h2 class="text-2xl font-bold text-center mb-6 text-gray-800">Acessar o Controle de</h2>
+{% load static %}
+<div class="flex items-center justify-center h-screen">
+    <div class="bg-white rounded-xl shadow-md h-3/4 w-3/4 grid grid-cols-4">
+        <div class="flex col-span-3 bg-black">
+            <img class="object-fill" src="{% static 'img\card-login.png' %}" alt="">
+        </div>
+        <div class="cols-span-1 flex flex-col p-6 bg-gray-900 h-full justify-center content-center">
+            <img class="h-32 w-32 self-center" src="{% static 'img\logo.png' %}" alt="">
+            <h2 class="text-2xl text-center mb-6 text-white self-center">Sistema de Acompanhamento de NE</h2>
 
-        <form method="POST">
-            {% csrf_token %}
+            <form class="self-center w-full space-y-2" method="POST">
+                {% csrf_token %}
 
-            <label for="{{ form.username.id_for_label }}" class="block text-gray-700">Usuário</label>
-            {{ form.username }}
+                <label for="{{ form.username.id_for_label }}" class="block text-gray-100">Usuário</label>
+                {{ form.username }}
 
-            <label for="{{ form.password.id_for_label }}" class="block text-gray-700">Senha</label>
-            {{ form.password }}
+                <label for="{{ form.password.id_for_label }}" class="block text-gray-100">Senha</label>
+                {{ form.password }}
 
-            <div>
-                <button type="submit">Acessar</button>
-            </div>
-        </form>
+                <div class="w-full">
+                    <button class="bg-blue-800 shadow-md text-white px-6 py-2 rounded-lg hover:bg-blue-700 w-full mt-4" type="submit">Acessar</button>
+                </div>
+
+                <p class="text-white pt-6">Não possui login? <a class="text-blue-700 hover:text-white hover:underline" href="{% url 'register' %}">Clique aqui</a> para realizar o cadastro</p>
+            </form>
+        </div>
     </div>
 </div>
 
