--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -10,29 +10,25 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Style.css -->
-    <link rel="stylesheet" href="{% static 'style.css' %}" />
+    <link rel="stylesheet" href="{% static '/css/style.css' %}" />
   </head>
-  <body class="bg-gray-100">
-
+  <body class="bg-gray-200">
     <!-- Pop-up de alertas do site -->
     {% if messages %}
-        <div id="messages-container" class="fixed top-5 right-5 space-y-2 z-50">
-            {% for msg in messages %}
-                <div class="popup-message px-4 py-2 rounded shadow-md transition-opacity duration-500
-                    {% if msg.tags == 'success' %}bg-green-500 text-white
-                    {% elif msg.tags == 'error' %}bg-red-500 text-white
-                    {% elif msg.tags == 'warning' %}bg-yellow-500 text-black
-                    {% elif msg.tags == 'info' %}bg-blue-500 text-white
-                    {% else %}bg-gray-500 text-white{% endif %}">
-                    {{ msg }}
-                </div>
-            {% endfor %}
-        </div>
+    <div id="messages-container" class="fixed top-5 right-5 space-y-2 z-50">
+      {% for msg in messages %}
+      <div
+        class="popup-message px-4 py-2 rounded shadow-md transition-opacity duration-500 {% if msg.tags == 'success' %}bg-green-500 text-white {% elif msg.tags == 'error' %}bg-red-500 text-white {% elif msg.tags == 'warning' %}bg-yellow-500 text-black {% elif msg.tags == 'info' %}bg-blue-500 text-white {% else %}bg-gray-500 text-white{% endif %}"
+      >
+        {{ msg }}
+      </div>
+      {% endfor %}
+    </div>
     {% endif %}
 
     <!-- Menu de navegação do site -->
-    <nav class="bg-gray-800 flex p-6 items-center">
-      <div class="flex shrink items-center">
+    <nav class="fixed top-0 left-0 bg-gray-900 w-full flex items-center h-14">
+      <div class="flex shrink items-center p-4">
         <img
           src="{% static 'img\logo.png' %}"
           alt="Your Company"
@@ -40,95 +36,104 @@
         />
       </div>
       <div
-        class="flex items-center justify-center sm:items-stretch sm:justify-start"
+        class="flex items-center justify-center sm:items-stretch sm:justify-start h-full"
       >
         <div class="hidden sm:ml-6 sm:block">
-          <div class="flex space-x-4">
+          <div class="flex space-x-4 h-full align-middle">
             <a
-              class="{% if active_page == 'control' %} bg-gray-900 {% endif %} rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white"
+              class="{% if active_page == 'control' %} border-b-8 border-gray-300 text-white {% endif %} px-3 py-2 text-sm font-medium text-gray-300 hover:border-gray-300 hover:border-b-4 hover:text-white content-center h-full"
               href="{% url 'control' %}"
               >Minhas NEs</a
             >
             <a
-              class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white"
+              class="{% if active_page == 'list' %} border-b-8 border-gray-300 text-white {% endif %} px-3 py-2 text-sm font-medium text-gray-300 hover:border-gray-300 hover:border-b-4 hover:text-white content-center h-full"
               href="{% url 'list' %}"
               >Todas as NEs</a
             >
             {% if user.role == 'admin' %}
-            <a class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white" href="{% url 'manage' %}">Gestão</a>
-            <a class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white" href="{% url 'admin:index' %}">Administração</a>
+            <a
+              class="{% if active_page == 'manage' %} border-b-8 border-gray-300 text-white {% endif %} px-3 py-2 text-sm font-medium text-gray-300 hover:border-gray-300 hover:border-b-4 hover:text-white content-center h-full"
+              href="{% url 'manage' %}"
+              >Gestão</a
+            >
+            <a
+              class="px-3 py-2 text-sm font-medium text-gray-300 hover:border-gray-300 hover:border-b-4 hover:text-white content-center h-full"
+              href="{% url 'admin:index' %}"
+              >Administração</a
+            >
             {% endif %}
           </div>
         </div>
       </div>
-      <div
-        class="flex grow justify-end"
-      >
-        <div class="flex hidden justify-items-end justify-self-end sm:ml-6 sm:block">
-            
-          <div class="flex space-x-4">
-            <a
-              class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white"
-              href=""
-              >{{ user }}</a
-            >
-
-            <a href="{% url 'logout' %}">Sair</a>
+      <div class="flex grow justify-end h-full">
+        <div
+          class="flex hidden justify-items-end justify-self-end sm:ml-6 sm:block px-3 align-middle"
+        >
+          <div class="flex h-full space-x-4">
+            <div class="px-3 py-2 text-sm font-medium text-gray-300 content-center">
+              usuário: {{ user }}
             </div>
 
+            <a
+              class="px-3 py-2 text-sm font-medium text-gray-300 hover:border-red-500 hover:border-b-4 hover:text-white content-center"
+              href="{% url 'logout' %}"
+            >
+              Sair
+            </a>
+          </div>
         </div>
       </div>
     </nav>
 
     <!-- Conteúdo do Sistema -->
-    {% block content %}{% endblock %}
+    <div class="p-6 mt-5">{% block content %}{% endblock %}</div>
 
-<!-- Scripts JS -->
-<script>
-    // Função para esconder todos os pop-ups após 3 segundos.
-    function hidePopupsAfterDelay() {
+    <!-- Scripts JS -->
+    <script>
+      // Função para esconder todos os pop-ups após 3 segundos.
+      function hidePopupsAfterDelay() {
         setTimeout(() => {
-            document.querySelectorAll(".popup-message").forEach(el => {
-                el.classList.add("opacity-0");
-                setTimeout(() => el.remove(), 500);
-            });
+          document.querySelectorAll(".popup-message").forEach((el) => {
+            el.classList.add("opacity-0");
+            setTimeout(() => el.remove(), 500);
+          });
         }, 3000);
-    }
+      }
 
-    // Função para ativar a pesquisa dinâmica na tabela.
-    function enableSearch(inputId, targetSelector) {
+      // Função para ativar a pesquisa dinâmica na tabela.
+      function enableSearch(inputId, targetSelector) {
         const searchInput = document.getElementById(inputId);
 
         if (!searchInput) return;
 
         searchInput.addEventListener("input", function () {
-            const term = this.value.toLowerCase();
-            const lines = document.querySelectorAll(targetSelector);
+          const term = this.value.toLowerCase();
+          const lines = document.querySelectorAll(targetSelector);
 
-            lines.forEach(line => {
-                const text = line.textContent.toLowerCase();
-                line.style.display = text.includes(term) ? "" : "none";
-            });
+          lines.forEach((line) => {
+            const text = line.textContent.toLowerCase();
+            line.style.display = text.includes(term) ? "" : "none";
+          });
         });
-    }
+      }
 
-    // Função para simular um acordeon.
-    function toggleAccordion(id) {
+      // Função para simular um acordeon.
+      function toggleAccordion(id) {
         const content = document.getElementById(id);
-        const icon = document.getElementById('icon-' + id);
+        const icon = document.getElementById("icon-" + id);
 
-        if (content.classList.contains('hidden')) {
-            content.classList.remove('hidden');
-            icon.classList.add('rotate-180');
+        if (content.classList.contains("hidden")) {
+          content.classList.remove("hidden");
+          icon.classList.add("rotate-180");
         } else {
-            content.classList.add('hidden');
-            icon.classList.remove('rotate-180');
+          content.classList.add("hidden");
+          icon.classList.remove("rotate-180");
         }
-    }
+      }
 
-    // Executando as funções.
-    hidePopupsAfterDelay();
-    enableSearch("search", ".table-line");
-</script>
-</body>
+      // Executando as funções.
+      hidePopupsAfterDelay();
+      enableSearch("search", ".table-line");
+    </script>
+  </body>
 </html>
