--- a/accounts/templates/log_and_reg.html
+++ b/accounts/templates/log_and_reg.html
@@ -10,9 +10,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- Style.css -->
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-800">
 
     <!-- Pop-up de alertas do site -->
     {% if messages %}
