--- a/ne_control/templates/ne_control/list.html
+++ b/ne_control/templates/ne_control/list.html
@@ -1,65 +1,74 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% load ne_filters %} 
+{% block title %} Controle de Notas de Empenho {% endblock %} {% block content %}
 
-{% load ne_filters %}
-
-{% block title %}Controle de Notas de Empenho{% endblock %}
-
-{% block content %}
-
-<div class="p-6">
-    <div class="max-w-full overflow-auto bg-white shadow-md p-6 rounded-2xl" >
-
-        <!-- Cabeçalho, Pesquisar e Adicionar Nota -->
-        <div class="mb-4 flex flex-col md:flex-row justify-between gap-4">
-            <input id="search" type="text" placeholder="Pesquisar NE ou Responsável..."
-                class="border border-gray-300 rounded-lg px-4 py-2 w-full md:w-1/3" />
-        </div>
-
-        <!-- Menu da lista das NEs -->
-        <table class="min-w-full text-sm text-left border border-gray-300">
-            <!-- Campos da lista. -->
-            <thead class="bg-gray-200 text-gray-700">
-                <tr>
-                    <th class="px-4 py-2 border">NE</th>
-                    <th class="px-4 py-2 border">A LIQUIDAR</th>
-                    <th class="px-4 py-2 border">LIQUIDADO A PAGAR</th>
-                    <th class="px-4 py-2 border">TOTAL A PAGAR</th>
-                    <th class="px-4 py-2 border">PAGO</th>
-                    <th class="px-4 py-2 border"></th>
-                </tr>
-            </thead>
-
-            <!-- Informações da lista. -->
-            <tbody>
-                
-                {% for note_ne in notes_ne %}
-                    <form method="POST" action="{% url 'list' %}">
-                        {% csrf_token %}
-
-                        <tr class="table-line hover:bg-gray-100">
-                            <td class="px-4 py-2 border">{{ note_ne.cod_ne }}</td>
-                            <td class="px-4 py-2 border">{{ note_ne.a_liquidar|brl }}</td>
-                            <td class="px-4 py-2 border">{{ note_ne.liquidado_pagar|brl }}</td>
-                            <td class="px-4 py-2 border">{{ note_ne.total_pagar|brl }}</td>
-                            <td class="px-4 py-2 border">{{ note_ne.pago|brl }}</td>
-
-                            <td class="px-2 py-2 border">
-
-                                <!-- Codigo do NE a ser reivindicado -->
-                                <input class="hidden" type="text" name="cod_ne" value="{{ note_ne.cod_ne }}">
-
-                                <button class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 toggle-measure"
-                                    type="submit">
-                                    REIVINDICAR
-                                </button>
-                            </td>
-                        </tr>
-                    </form>
-                {% endfor %}
-            </tbody>
-        </table>
+<div class="pt-4">
+  <div class="flex flex-col h-90vh max-w-full bg-white shadow-md rounded-2xl px-6">
+    <!-- Cabeçalho, Pesquisar e Adicionar Nota -->
+    <div class="py-6 flex flex-col justify-between">
+      <input
+        id="search"
+        type="text"
+        placeholder="Pesquisar NE ou Responsável..."
+        class="border border-gray-300 rounded-lg px-4 py-2 w-full md:w-1/3"
+      />
     </div>
+    <div
+      class="flex flex-col justify-between overflow-y-scroll"
+    >
+      <!-- Menu da lista das NEs -->
+      <table class="w-full text-sm text-center border-gray-300">
+        <!-- Campos da lista. -->
+        <thead class="bg-gray-200 text-gray-700 sticky top-0">
+          <tr>
+            <th class="px-4 py-2">NE</th>
+            <th class="px-4 py-2">DIAS</th>
+            <th class="px-4 py-2">A LIQUIDAR (R$)</th>
+            <th class="px-4 py-2">LIQUIDADO A PAGAR (R$)</th>
+            <th class="px-4 py-2">TOTAL A PAGAR (R$)</th>
+            <th class="px-4 py-2">PAGO (R$)</th>
+            <th class="px-4 py-2"></th>
+          </tr>
+        </thead>
+
+        <!-- Informações da lista. -->
+        <tbody>
+          {% for note_ne in notes_ne %}
+          <form method="POST" action="{% url 'list' %}">
+            {% csrf_token %}
+
+            <tr
+              class="table-line bg-gray-50 hover:bg-gray-100 text-center border-b"
+            >
+              <td class="px-4 py-2">{{ note_ne.cod_ne }}</td>
+              <td class="px-4 py-2">{{ note_ne.dias }}</td>
+              <td class="px-4 py-2">{{ note_ne.a_liquidar|brl }}</td>
+              <td class="px-4 py-2">{{ note_ne.liquidado_pagar|brl }}</td>
+              <td class="px-4 py-2">{{ note_ne.total_pagar|brl }}</td>
+              <td class="px-4 py-2">{{ note_ne.pago|brl }}</td>
+
+              <td class="px-2 py-2">
+                <!-- Codigo do NE a ser reivindicado -->
+                <input
+                  class="hidden"
+                  type="text"
+                  name="cod_ne"
+                  value="{{ note_ne.cod_ne }}"
+                />
+
+                <button
+                  class="bg-blue-800 shadow-md text-white px-6 py-2 rounded-lg hover:bg-blue-700 toggle-measure"
+                  type="submit"
+                >
+                  Reivindicar
+                </button>
+              </td>
+            </tr>
+          </form>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
 
 {% endblock %}
-
