--- a/ne_control/templates/ne_control/manage.html
+++ b/ne_control/templates/ne_control/manage.html
@@ -1,169 +1,256 @@
-{% extends 'base.html' %}
-
-{% block title %}Importador de NE{% endblock %}
-
+{% extends 'base.html' %} {% block title %}Importador de NE{% endblock %} 
 {% block content %}
 
-<div class="p-6">
-    <!-- Importação das NEs pelo CSV -->
-    <div class="max-w-full overflow-auto bg-white rounded-2xl shadow-md p-6">
-        <button onclick="toggleAccordion('section1')" class="w-full text-left py-3 px-4 bg-gray-100 hover:bg-gray-200 font-semibold flex justify-between items-center">
-            Importar arquivo .csv com NEs do SAG
-            <svg id="icon-section1" class="w-5 h-5 transition-transform duration-300 transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-            </svg>
-        </button>
+<div class="pt-6 flex flex-col space-y-2 items-center w-full">
+  <!-- Importação das NEs pelo CSV -->
+  <div class="w-1/2 bg-white rounded-2xl shadow-sm p-6">
+    <div class="flex flex-col items-center space-y-2">
+      <div class="font-medium antialiased w-full text-left text-gray-800">
+        Importar NE do SAG via arquivo .CSV
+      </div>
 
-        <div id="section1" class="hidden">
-            <form method="POST" enctype="multipart/form-data">
-                {% csrf_token %}
-                {{ form1 }}
+      <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %} {{ form1 }}
+        <div class="flex flex-col items-center">
+          <input
+            type="file"
+            name="csv_file"
+            accept=".csv"
+            required
+            class="p-6 border-dashed border-2 border-gray-600 mb-4 text-slate-500 file:font-medium file:text-blue-600 file:bg-inherit file:border-none file:text-blue-600 hover:file:text-blue-700 hover:file:cursor-pointer hover:file:font-bold"
+          />
 
-                <input type="file" name="csv_file" accept=".csv" required class="mb-4">
+          <button
+            class="bg-blue-800 text-white px-6 py-2 rounded-lg hover:bg-blue-700"
+            name="form_type"
+            value="form1"
+          >
+            Importar Notas de Empenho
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
 
-                <button class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700"
-                    name="form_type" value="form1">
-                    Impotar CSV
+  <!-- Solicitações para reivindicação de NEs -->
+  <div class="w-1/2 bg-white rounded-2xl shadow-sm p-6">
+    <button
+      onclick="toggleAccordion('section2')"
+      class="w-full text-left py-3 px-4 bg-gray-100 hover:bg-gray-200 font-semibold flex justify-between items-center"
+    >
+      <span class="flex justify-between w-full content-center">
+        <span class="text-gray-800 content-center"
+          >Solicitações de reivindicação de NEs</span
+        >
+        <!-- Contador de solicitações -->
+        {% if claim_count > 0 %}
+        <span
+          class="text-sm animate-pulse items-end bg-red-600 text-white font-medium rounded-lg px-4 py-2 mr-4 flex flex-row space-x-1"
+        >
+          <span class="p-none">{{ claim_count }}</span>
+        </span>
+        {% endif %}
+      </span>
+      <svg
+        id="icon-section1"
+        class="w-5 h-5 transition-transform duration-300 transform"
+        fill="none"
+        stroke="currentColor"
+        viewBox="0 0 24 24"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M19 9l-7 7-7-7"
+        />
+      </svg>
+    </button>
+    <div id="section2" class="hidden">
+      {% if claim_count > 0 %}
+      <table class="mt-4 min-w-full text-sm text-left text-center">
+        <!-- Campos da lista -->
+        <thead class="text-gray-700 border-b-2 border-gray-500">
+          <tr>
+            <th class="px-4 py-4 w-1/2">Código da NE</th>
+            <th class="px-4 py-4">Usuário que solicitou</th>
+            <th class="px-4 py-4">Ação</th>
+          </tr>
+        </thead>
+
+        <!-- Informações da lista -->
+        <tbody>
+          {% for claim in claim_list %}
+
+          <tr class="table-line hover:bg-gray-100 border-b bg-gray-50">
+            <td class="px-4 py-2">{{ claim.cod_ne }}</td>
+            <td class="px-4 py-2">{{ claim.user }}</td>
+            <!-- Autorizar ou negar a reivindicação -->
+            <td class="px-4 py-2 flex flex-row space-x-1 justify-center">
+              <form method="POST">
+                {% csrf_token %} 
+                {{ form2 }}
+                <!-- Codigo do NE a ser reivindicado -->
+                <input
+                  class="hidden"
+                  type="text"
+                  name="cod_ne"
+                  value="{{ claim.cod_ne }}"
+                />
+                <input
+                  class="hidden"
+                  type="text"
+                  name="claim_id"
+                  value="{{ claim.id }}"
+                />
+
+                <button
+                  class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 toggle-measure"
+                  type="submit"
+                  name="form_type"
+                  value="form2"
+                >
+                  Autorizar
                 </button>
-            </form>
+              </form>
+              <form method="POST">
+                {% csrf_token %} 
+                {{ form3 }}
+                <!-- Codigo do NE a ser reivindicado -->
+                <input
+                  class="hidden"
+                  type="text"
+                  name="claim_id"
+                  value="{{ claim.id }}"
+                />
+
+                <button
+                  class="bg-red-600 text-white px-6 py-2 rounded-lg hover:bg-red-700 toggle-measure"
+                  type="submit"
+                  name="form_type"
+                  value="form3"
+                >
+                  Negar
+                </button>
+              </form>
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+      {% else %}
+      <div class="flex flex-col justify-center w-full p-4">
+        <div class="flex px-4 justify-center">
+          Nenhuma solicitação encontrada.
         </div>
+      </div>
+      {% endif %}
     </div>
+  </div>
 
-    <!-- Solicitações para reivindicação de NEs -->
-    <div class="max-w-full overflow-auto bg-white rounded-2xl shadow-md p-6">
-        <button onclick="toggleAccordion('section2')" class="w-full text-left py-3 px-4 bg-gray-100 hover:bg-gray-200 font-semibold flex justify-between items-center">
-            <span>
-                Solicitações de reivindicação de NEs
-                <!-- Contador de solicitações -->
-                {% if claim_count > 0 %}
-                    <span>
-                        {{ claim_count }}
-                    </span>
-                {% endif %}
-            </span>
-            <svg id="icon-section1" class="w-5 h-5 transition-transform duration-300 transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-            </svg>
-        </button>
-        <div id="section2" class="hidden">
-            <table class="min-w-full text-sm text-left border border-gray-300">
-                <!-- Campos da lista -->
-                <thead class="bg-gray-200 text-gray-700">
-                    <tr>
-                        <th class="px-4 py-2 border">Código da NE</th>
-                        <th class="px-4 py-2 border">Usuário que solicitou</th>
-                        <th class="px-4 py-2 border">Ação</th>
-                    </tr>
-                </thead>
+  <!-- Autorizar registro de usuário -->
+  <div class="w-1/2 bg-white rounded-2xl shadow-sm p-6">
+    <button
+      onclick="toggleAccordion('section3')"
+      class="w-full text-left py-3 px-4 bg-gray-100 hover:bg-gray-200 font-semibold flex justify-between items-center"
+    >
+      <span class="flex justify-between w-full content-center">
+        <!-- Contador de solicitações -->
+        Solicitações de acesso ao sistema {% if user_count > 0 %}
+        <span
+          class="text-sm animate-pulse items-end bg-red-600 text-white font-medium rounded-lg px-4 py-2 mr-4 flex flex-row space-x-1"
+        >
+        <span> {{ user_count }} </span>
+        </span>
+        {% endif %}
+      </span>
+      <svg
+        id="icon-section1"
+        class="w-5 h-5 transition-transform duration-300 transform"
+        fill="none"
+        stroke="currentColor"
+        viewBox="0 0 24 24"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M19 9l-7 7-7-7"
+        />
+      </svg>
+    </button>
+    <div id="section3" class="hidden">
+      {% if user_count > 0 %}
+      <table class="mt-4 min-w-full text-sm text-left text-center">
+        <!-- Campos da lista -->
+        <thead class="text-gray-700 border-b-2 border-gray-500">
+          <tr>
+            <th class="px-4 py-4 w-1/3">Nome do Usuário</th>
+            <th class="px-4 py-4 w-1/3">Cargo</th>
+            <th class="px-4 py-4 w-1/3">Ação</th>
+          </tr>
+        </thead>
 
-                <!-- Informações da lista -->
-                <tbody>
-                    {% for claim in claim_list %}
-                        <tr class="table-line hover:bg-gray-100">
-                            <td class="px-4 py-2 border">{{ claim.cod_ne }}</td>
-                            <td class="px-4 py-2 border">{{ claim.user }}</td>
+        <!-- Informações da lista -->
+        <tbody>
+          {% for user in user_list %}
+          <tr class="table-line hover:bg-gray-100 border-b bg-gray-50">
+            <td class="px-4 py-2">{{ user }}</td>
+            <td class="px-4 py-2">{{ user.role }}</td>
 
-                            <!-- Autorizar ou negar a reivindicação -->
-                            <td>
-                                <form method="POST">
-                                    {% csrf_token %}
-                                    {{ form2 }}
-                                    
-                                    <!-- Codigo do NE a ser reivindicado -->
-                                    <input class="hidden" type="text" name="cod_ne" value="{{ claim.cod_ne }}">
-                                    <input class="hidden" type="text" name="claim_id" value="{{ claim.id }}">
+            <!-- Autorizar ou negar a acesso -->
+            <td class="px-4 py-2 flex flex-row space-x-1 justify-center">
+              <form method="POST">
+                {% csrf_token %} {{ form4 }}
 
-                                    <button class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 toggle-measure"
-                                        type="submit" name="form_type" value="form2">
-                                        Autorizar
-                                    </button>
-                                </form>
-                                <form method="POST">
-                                    {% csrf_token %}
-                                    {{ form3 }}
+                <input
+                  class="hidden"
+                  type="text"
+                  name="user_id"
+                  value="{{ user.id }}"
+                />
 
-                                    <!-- Codigo do NE a ser reivindicado -->
-                                    <input class="hidden" type="text" name="claim_id" value="{{ claim.id }}">
-                                
-                                    <button class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 toggle-measure"
-                                        type="submit" name="form_type" value="form3">
-                                        Negar
-                                    </button>
-                                </form>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+                <button
+                  class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 toggle-measure"
+                  type="submit"
+                  name="form_type"
+                  value="form4"
+                >
+                  Autorizar
+                </button>
+              </form>
+              <form method="POST">
+                {% csrf_token %} {{ form5 }}
+
+                <input
+                  class="hidden"
+                  type="text"
+                  name="user_id"
+                  value="{{ user.id }}"
+                />
+
+                <button
+                  class="bg-red-600 text-white px-6 py-2 rounded-lg hover:bg-red-700 toggle-measure"
+                  type="submit"
+                  name="form_type"
+                  value="form5"
+                >
+                  Negar
+                </button>
+              </form>
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+      {% else %}
+      <div class="flex flex-col justify-center w-full p-4">
+        <div class="flex px-4 justify-center">
+          Nenhuma solicitação encontrada.
         </div>
+      </div>
+      {% endif %}
     </div>
-
-    <!-- Autorizar registro de usuário -->
-    <div class="max-w-full overflow-auto bg-white rounded-2xl shadow-md p-6">
-        <button onclick="toggleAccordion('section3')" class="w-full text-left py-3 px-4 bg-gray-100 hover:bg-gray-200 font-semibold flex justify-between items-center">
-            <span>
-                <!-- Contador de solicitações -->
-                Solicitações de acesso ao sistema
-                {% if user_count > 0 %}
-                    <span>
-                        {{ user_count }}
-                    </span>
-                {% endif %}
-            </span>
-            <svg id="icon-section1" class="w-5 h-5 transition-transform duration-300 transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-            </svg>
-        </button>
-        <div id="section3" class="hidden">
-            <table class="min-w-full text-sm text-left border border-gray-300">
-                <!-- Campos da lista -->
-                <thead class="bg-gray-200 text-gray-700">
-                    <tr>
-                        <th class="px-4 py-2 border">Nome do Usuário</th>
-                        <th class="px-4 py-2 border">Cargo</th>
-                        <th class="px-4 py-2 border">Ação</th>
-                    </tr>
-                </thead>
-
-                <!-- Informações da lista -->
-                <tbody>
-                    {% for user in user_list %}
-                        <tr class="table-line hover:bg-gray-100">
-                            <td class="px-4 py-2 border">{{ user }}</td>
-                            <td class="px-4 py-2 border">{{ user.role }}</td>
-
-                            <!-- Autorizar ou negar a acesso -->
-                            <td>
-                                <form method="POST">
-                                    {% csrf_token %}
-                                    {{ form4 }}
-
-                                    <input class="hidden" type="text" name="user_id" value="{{ user.id }}">
-
-                                    <button class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 toggle-measure"
-                                        type="submit" name="form_type" value="form4">
-                                        Autorizar
-                                    </button>
-                                </form>
-                                <form method="POST">
-                                    {% csrf_token %}
-                                    {{ form5 }}
-
-                                    <input class="hidden" type="text" name="user_id" value="{{ user.id }}">
-                                
-                                    <button class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 toggle-measure"
-                                        type="submit" name="form_type" value="form5">
-                                        Negar
-                                    </button>
-                                </form>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
-    </div>
+  </div>
 </div>
-
 {% endblock %}
-
