workplace add admin view all nes

--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -25,6 +25,9 @@
                 <label for="{{ form.confirm_password.id_for_label }}" class="block text-gray-100">Confirme a Senha:</label>
                 {{ form.confirm_password }}
 
+                <label for="{{ form.workplace.id_for_label }}" class="block text-gray-100">Secão:</label>
+                {{ form.workplace }}
+
                 <div class="w-full mb-6">
                     <button class="bg-blue-800 shadow-md text-white px-6 py-2 rounded-lg hover:bg-blue-700 w-full mt-4" type="submit">Registrar</button>
                 </div>
