--- a/ne_control/templates/ne_control/manage.html
+++ b/ne_control/templates/ne_control/manage.html
@@ -52,7 +52,7 @@
         {% endif %}
       </span>
       <svg
-        id="icon-section1"
+        id="icon-section2"
         class="w-5 h-5 transition-transform duration-300 transform"
         fill="none"
         stroke="currentColor"
@@ -165,7 +165,7 @@
         {% endif %}
       </span>
       <svg
-        id="icon-section1"
+        id="icon-section3"
         class="w-5 h-5 transition-transform duration-300 transform"
         fill="none"
         stroke="currentColor"
@@ -187,6 +187,7 @@
           <tr>
             <th class="px-4 py-4 w-1/3">Nome do Usuário</th>
             <th class="px-4 py-4 w-1/3">Cargo</th>
+            <th class="px-4 py-4 w-1/3">Seção</th>
             <th class="px-4 py-4 w-1/3">Ação</th>
           </tr>
         </thead>
@@ -197,6 +198,7 @@
           <tr class="table-line hover:bg-gray-100 border-b bg-gray-50">
             <td class="px-4 py-2">{{ user }}</td>
             <td class="px-4 py-2">{{ user.role }}</td>
+            <td class="px-4 py-2">{{ user.workplace }}</td>
 
             <!-- Autorizar ou negar a acesso -->
             <td class="px-4 py-2 flex flex-row space-x-1 justify-center">
