--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -6,7 +6,7 @@
 
 {% load static %}
 <div class="flex items-center justify-center h-screen">
-    <div class="bg-white rounded-xl shadow-md h-3/4 w-3/4 grid grid-cols-4">
+    <div class="bg-white rounded-xl shadow-md w-3/4 grid grid-cols-4">
         <div class="flex col-span-3 bg-black">
             <img class="object-fill" src="{% static 'img\card-login.png' %}" alt="">
         </div>
