--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -7,7 +7,7 @@
 {% load static %}
 
 <div class="flex items-center justify-center h-screen">
-    <div class=" bg-gray-900 rounded-xl shadow-md h-3/4 w-1/2 grid grid-cols-4">
+    <div class=" bg-gray-900 rounded-xl shadow-md w-1/2 grid grid-cols-4">
         <div class="col-start-2 col-span-2 flex-col p-6 bg-gray-900 h-full justify-center content-center">
             <img class="h-32 w-32 self-center" src="{% static 'img\logo.png' %}" alt="">
             <h2 class="text-2xl text-center mb-6 text-white self-center">Registrar novo usuário ao sistema</h2>
